--- a/src/frontend/ui.portal.jenn/wwwroot/sass/abstracts/_variables.scss
+++ b/src/frontend/ui.portal.jenn/wwwroot/sass/abstracts/_variables.scss
@@ -19,11 +19,14 @@ $color-grey-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
 
+$midnight: #3862ad;
+$clouds: #3862ad;
+
 //medias Q
 $mobile: 767px;
 $tabletW: 900px;
 $tablet: 1024px;
-$netbook: 1199px;
+$netbook: 1300px;
 $notebook: 1480px;
 $monitor: 1820px;
 $full: 1480px;
