--- a/src/frontend/ui.portal.jenn/wwwroot/sass/main.scss
+++ b/src/frontend/ui.portal.jenn/wwwroot/sass/main.scss
@@ -9,8 +9,14 @@
 @import "base/utilities";
 
 @import "components/forms";
+@import "components/card";
+@import "components/brands";
+@import "components/rating";
+@import "components/button";
+@import "components/tabs";
 
 @import "layout/footer";
+@import "layout/pages";
 @import "layout/header";
 @import "layout/navigation";
 
