--- a/src/frontend/ui.portal.jenn/Views/Home/Inicio.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Home/Inicio.cshtml
@@ -37,26 +37,7 @@
                 </h1>
             </div>
             <div class="col-xl-5 offset-xl-1 col-lg-7 col-md-7 col-6">
-                <ul class="nav navigation">
-                    <li class="nav-item"><a class="nav-link" href="" title="Precisa de ajuda">Precisa de ajuda</a></li>
-                    <li class="nav-item"><a class="nav-link" href="" title="Cadastrar">Cadastrar</a></li>
-                    <li class="nav-item"><a class="nav-link" href="" title="Entrar">Entrar</a></li>
-                    <li class="nav-item last-nav"><a class="nav-link" href="" title="Você presta serviços">Você presta serviços</a></li>
-                </ul>
-                <div class="mobile-nav-button">
-                    <div class="mobile-nav-button__line"></div>
-                    <div class="mobile-nav-button__line"></div>
-                    <div class="mobile-nav-button__line"></div>
-                </div>
-
-                <nav class="mobile-menu">
-                    <ul>
-                        <li class="nav-item"><a class="nav-link" href="" title="Precisa de ajuda">Precisa de ajuda</a></li>
-                        <li class="nav-item"><a class="nav-link" href="" title="Cadastrar">Cadastrar</a></li>
-                        <li class="nav-item"><a class="nav-link" href="" title="Entrar">Entrar</a></li>
-                        <li class="nav-item last-nav"><a class="nav-link" href="" title="Você presta serviços">Você presta serviços</a></li>
-                    </ul>
-                </nav>
+                @await Component.InvokeAsync("TopoControleLink")
             </div>
         </div>
     </header>
@@ -152,53 +133,11 @@
     <footer class="footer">
         <div class="row">
             <div class="col-xl-6 col-lg-12 col-md-12">
-                <div class="row">
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Encontre a clínica</h5>
-                        <p>Busque a clínica ou laboratórios altamente qualificados perto de você</p>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Marque seu exame</h5>
-                        <p>Agende seu exame ou vacinas online ou diretamente com a clínica</p>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Pague online</h5>
-                        <p>Se seu exame ou vacina é particular, pague online em até 12x</p>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Avalie o serviço</h5>
-                        <p>Após seu exame você poderá dar seu feedback, é muito simples</p>
-                    </div>
-                </div>
+                @await Component.InvokeAsync("FooterParte1")
+
             </div>
             <div class="col-xl-5 offset-xl-1  right-side col-lg-12 col-md-12">
-                <div class="row">
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Serviço</h5>
-                        <a href="" title="Segurança da informação">Segurança da informação</a>
-                        <a href="" title="Quem somos">Quem somos</a>
-                        <a href="" title="Contato">Contato</a>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Pacientes</h5>
-                        <a href="" title="Perguntas frequentes">Perguntas frequentes</a>
-                        <a href="" title="Termos e condições">Termos e condições</a>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Instituições de saúde</h5>
-                        <a href="" title="Entre em contato">Entre em contato</a>
-                        <a href="" title="Termos e condições">Termos e condições</a>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <img class="logo-footer" src="img/logo-reduz-jenn.png" alt="" />
-                        <p>Ghan consultoria e sistemas Ltda. Estrada das Lagrimas, 1877 São Caetano do Sul - SP</p>
-                        <ul class="social">
-                            <li><a href="" title=""><img src="img/social/icone-facebook.png" alt="" /></a></li>
-                            <li><a href="" title=""><img src="img/social/icone-instagram.png" alt="" /></a></li>
-                            <li><a href="" title=""><img src="img/social/icone-linkedin.png" alt="" /></a></li>
-                        </ul>
-                    </div>
-                </div>
+                @await Component.InvokeAsync("FooterParte2")
             </div>
         </div>
     </footer>
@@ -206,7 +145,7 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-    
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
     <script type="text/javascript" src="js/script.js"></script>
 
