--- a/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
+++ b/src/frontend/ui.portal.jenn/Views/Shared/_Layout.cshtml
@@ -48,26 +48,7 @@
                         </div>
                     </div>
                     <div class="col-xl-6">
-                        <ul class="nav navigation">
-                            <li class="nav-item"><a class="nav-link" href="" title="Precisa de ajuda">Precisa de ajuda</a></li>
-                            <li class="nav-item"><a class="nav-link" href="" title="Cadastrar">Cadastrar</a></li>
-                            <li class="nav-item"><a class="nav-link" href="" title="Entrar">Entrar</a></li>
-                            <li class="nav-item last-nav"><a class="nav-link" href="" title="Você presta serviços">Você presta serviços</a></li>
-                        </ul>
-                        <div class="mobile-nav-button">
-                            <div class="mobile-nav-button__line"></div>
-                            <div class="mobile-nav-button__line"></div>
-                            <div class="mobile-nav-button__line"></div>
-                        </div>
-
-                        <nav class="mobile-menu">
-                            <ul>
-                                <li class="nav-item"><a class="nav-link" href="" title="Precisa de ajuda">Precisa de ajuda</a></li>
-                                <li class="nav-item"><a class="nav-link" href="" title="Cadastrar">Cadastrar</a></li>
-                                <li class="nav-item"><a class="nav-link" href="" title="Entrar">Entrar</a></li>
-                                <li class="nav-item last-nav"><a class="nav-link" href="" title="Você presta serviços">Você presta serviços</a></li>
-                            </ul>
-                        </nav>
+                        @await Component.InvokeAsync("TopoControleLink")
                     </div>
                 </div>
 
@@ -235,53 +216,11 @@
     <footer class="footer">
         <div class="row">
             <div class="col-xl-6 col-lg-12 col-md-12">
-                <div class="row">
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Encontre a clínica</h5>
-                        <p>Busque a clínica ou laboratórios altamente qualificados perto de você</p>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Marque seu exame</h5>
-                        <p>Agende seu exame ou vacinas online ou diretamente com a clínica</p>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Pague online</h5>
-                        <p>Se seu exame ou vacina é particular, pague online em até 12x</p>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Avalie o serviço</h5>
-                        <p>Após seu exame você poderá dar seu feedback, é muito simples</p>
-                    </div>
-                </div>
+                @await Component.InvokeAsync("FooterParte1")
+           
             </div>
             <div class="col-xl-5 offset-xl-1  right-side col-lg-12 col-md-12">
-                <div class="row">
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Serviço</h5>
-                        <a href="" title="Segurança da informação">Segurança da informação</a>
-                        <a href="" title="Quem somos">Quem somos</a>
-                        <a href="" title="Contato">Contato</a>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Pacientes</h5>
-                        <a href="" title="Perguntas frequentes">Perguntas frequentes</a>
-                        <a href="" title="Termos e condições">Termos e condições</a>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <h5>Instituições de saúde</h5>
-                        <a href="" title="Entre em contato">Entre em contato</a>
-                        <a href="" title="Termos e condições">Termos e condições</a>
-                    </div>
-                    <div class="col-xl-3 col-lg-3 col-md-6">
-                        <img class="logo-footer" src="img/logo-reduz-jenn.png" alt="" />
-                        <p>Ghan consultoria e sistemas Ltda. Estrada das Lagrimas, 1877 São Caetano do Sul - SP</p>
-                        <ul class="social">
-                            <li><a href="" title=""><img src="img/social/icone-facebook.png" alt="" /></a></li>
-                            <li><a href="" title=""><img src="img/social/icone-instagram.png" alt="" /></a></li>
-                            <li><a href="" title=""><img src="img/social/icone-linkedin.png" alt="" /></a></li>
-                        </ul>
-                    </div>
-                </div>
+                @await Component.InvokeAsync("FooterParte2")
             </div>
         </div>
     </footer>
