--- a/src/frontend/ui.portal.jenn/wwwroot/sass/layout/_footer.scss
+++ b/src/frontend/ui.portal.jenn/wwwroot/sass/layout/_footer.scss
@@ -108,3 +108,33 @@
       }
    }
 }
+.page{
+   position: relative;
+   .footer{
+      background-image: url('../img/bg-footer-pages.png');
+      width: 100%;
+      height: 175px;
+      position: relative;
+      bottom: 0;
+      left: 0;
+      top: 40px;
+      background-size: cover;
+      background-position: center center;
+      @include tablet{
+         background: none;
+         top: 0;
+      }
+      h5{
+         padding-top: 6rem;
+         @include mobile{
+            padding-top: 1rem;
+         }
+      }
+      .right-side{
+         padding-top: 5rem;
+         h5{
+            padding-top: 0;
+         }
+      }
+   }
+}
