--- a/src/frontend/ui.portal.jenn/wwwroot/sass/layout/_header.scss
+++ b/src/frontend/ui.portal.jenn/wwwroot/sass/layout/_header.scss
@@ -27,17 +27,57 @@
      
     }
     &--logo{
-        margin: 3.5rem 0 2.5rem 6.75rem;
+        margin: 3.5rem 0 2.5rem 4.75rem;
         @include mobile{
-          margin: 2.5rem 0 2.5rem 4.75rem;
-          width: 60%;
+          margin: 2.5rem 0 2.5rem 1.75rem;
+          width: 70%;
       }
     }
+  
   }
-  @include mobile{
+  @include tablet{
     overflow-y: initial;
     overflow-x: initial;
 
 
+  }
+  .menu-header{
+    float: right;
+    width: 42%;
+    margin-right: 38px;
+    @include notebook{
+      width: 47%;
+    }
+    @include netbook{
+      width: 55%;
+    }
+  }
+  .page-name{
+    margin-top: 3.5rem;
+    float: left;
+    width: 55%;
+    padding-left: 7px;
+    @include notebook{
+      width: 48%;
+    }
+    @include tablet{
+      width: 100%;
+      margin-top: 0;
+    }
+    @include mobile{
+      width: 100%;
+      position: absolute;
+      top: 40px;
+      left: -78%;
+    }
+    h1{
+       color: $color-white;
+       padding-top: toRem(100);
+       font-size: toRem(50);
+       font-weight: 700;
+       @include tablet{
+        font-size: 2.125rem;
+       }
+    }
   }
 }
